--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
         node-version: '10.x'
     - name: Pre-install
       run: |
-        npm i
+        yarn
     - name: Run tests
       run: |
-        npm run test
+        yarn test
 
